nav no longer clipping header on article pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -487,6 +487,9 @@ footer {
   .submit input{
     width: 100px;
   }
+  .post header {
+  margin-top: 50px; 
+  }
 }
 @media screen and (max-width:400px){
   #landing {
